
    o   scatter.smooth() and loess.smooth() now handle missing values
	in their inputs.

    o   The use of UseMethod() with no argument was not documented on
	the help page and is now regarded as an error.

    o   The assignment form of split() allows recycling of vectors 
        within the value list. In particular, things like 
            split(x, g) <- lapply(split(x, g), mean)
        now work

    o   Added colorRamp() and colorRampPalette() for color interpolation.

    o	install.packages() and friends now accept a vector of URLs for
	'CRAN' or 'contriburl' and get the newest available version of
	a package from the first repository on the list in which it is
	found.


UTILITIES

    o   New functions mirror2html() and checkCRAN().
    

DOCUMENTATION

    o	File doc/html/faq.html no longer exists, and doc/manual/R-FAQ.html
	(which has active links to other manuals) is used instead.
	(If makeinfo >= 4.5 is not available, the version on CRAN is
	linked to.)


C-LEVEL FACILITIES

    o	There are new public C/C++ header files Rinterface.h and
	R_ext/RStartup.h for use with external GUIs.


DEPRECATED & DEFUNCT

    o	The aqua module for MacOS X has been removed: --with-aqua now
	refers to the unbundled Cocoa GUI.

    o	Capabilities "bzip2", "GNOME, "libz" and "PCRE" are defunct.

    o	Capability "IEEE754" is deprecated.


INSTALLATION CHANGES

    o	R_XTRA_[CF]FLAGS are now used during the configuration tests,
	and [CF]PICFLAGS if --enable-R-shlib was specified.  This
	ensures that features such as inlining are only used if the
	compilation flags specified support them.  (PR#7257)

    o	Files FAQ, RESOURCES, doc/html/resources.html are no longer in
	the SVN sources but are made by 'make dist'.

    o	The GNOME GUI is unbundled, currently available by Subversion only.

    o	Configuring without having the recommended packages is now an
	error unless --with-recommended-packages=no is used.


BUG FIXES
