@@ -154,8 +154,9 @@ function(package, help, pos = 2, lib.loc = NULL, character.only = FALSE,
             return(if (logical.return) TRUE else invisible(.packages()))
         }
         if(package == "lqs") {
-            cat("Package", sQuote("lqs"),
-                "has been moved back to package", sQuote("MASS"), "\n")
+            warning("package ", sQuote("lqs"),
+                " has been moved back to package ", sQuote("MASS"),
+                    call. = FALSE, immediate. = TRUE)
             have.VR <- "package:MASS" %in% search()
             if(!have.VR) {
                 if(require("MASS", quietly=TRUE))
