@@ -90,7 +90,7 @@ FUNTAB R_FunTab[] = {
     {"next", do_break, CTXT_NEXT, 0, -1, {PP_NEXT, PREC_FN, 0}},
     {"return", do_return, 0, 0, -1, {PP_RETURN, PREC_FN, 0}},
     {"stop", do_stop, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
-    {"warning", do_warning, 0, 111, 2, {PP_FUNCALL, PREC_FN, 0}},
+    {"warning", do_warning, 0, 111, 3, {PP_FUNCALL, PREC_FN, 0}},
 #ifdef NEW_CONDITION_HANDLING
     {".addCondHands", do_addCondHands, 0, 111, 5, {PP_FUNCALL, PREC_FN, 0}},
     {".resetCondHands", do_resetCondHands, 0, 111, 1, {PP_FUNCALL, PREC_FN, 0}},
